--- a/templates/httpd.conf-Alpine.j2
+++ b/templates/httpd.conf-Alpine.j2
@@ -481,3 +481,5 @@ LogLevel warn
 # Load config files from the config directory "/etc/apache2/conf.d".
 #
 IncludeOptional /etc/apache2/conf.d/*.conf
+
+TraceEnable Off
