--- a/templates/httpd.conf-RedHat.j2
+++ b/templates/httpd.conf-RedHat.j2
@@ -356,3 +356,5 @@ EnableSendfile on
 #
 # Load config files in the "/etc/httpd/conf.d" directory, if any.
 IncludeOptional conf.d/*.conf
+
+TraceEnable Off
