--- a/templates/httpd.conf-Suse.j2
+++ b/templates/httpd.conf-Suse.j2
@@ -234,3 +234,5 @@ IncludeOptional /etc/apache2/vhosts.d/*.conf
 #       putting its name into APACHE_CONF_INCLUDE_FILES in 
 #       /etc/sysconfig/apache2 -- this will make system updates 
 #       easier :) 
+
+TraceEnable Off
